# bib

./: .pdf_manifest.json  README.md  Snakefile  extract-figures.md  missing_pdfs.txt  neuropy.bib  pandoc-defaults.yaml  pixecog.bib  pyproject.toml
.datalad/: config
.snakemake/metadata/: L2hvbWUvYXJhc2gvRG9jdW1lbnRzL1NjaWVuY2UvVW5pL05ldXJvUHkvTmV1cm9QeVNlbWluYXIvYmliL25ldXJvcHkuYmli  L2hvbWUvYXJhc2gvRG9jdW1lbnRzL1NjaWVuY2UvVW5pL05ldXJvUHkvTmV1cm9QeVNlbWluYXIvYmliL2xvZ3MvZmV0Y2hlZF9wZGZzLnR4dA==  ZGVyaXZhdGl2ZXMvZmlndXJlcy9iYXR0YWdsaWFfMjAwNF9IaXBwb2NhbXBhbFNoYXJwL29ubGluZQ==  ZGVyaXZhdGl2ZXMvZmlndXJlcy9iZW5pdG9fMjAxNF9TcGF0aWFsTW9kdWxlcy9vbmxpbmU=  ZGVyaXZhdGl2ZXMvZmlndXJlcy9iZW5pdG9fMjAxNF9TcGF0aWFsTW9kdWxlcy9wZGZmaWd1cmVzMg==  ZGVyaXZhdGl2ZXMvZmlndXJlcy9mZXJuYW5kZXotcnVpel8yMDEzX0lkZW50aWZ5aW5nU3luYXB0aWMvb25saW5l  ZGVyaXZhdGl2ZXMvZmlndXJlcy9mZXJuYW5kZXotcnVpel8yMDEzX0lkZW50aWZ5aW5nU3luYXB0aWMvcGRmZmlndXJlczI=  ZGVyaXZhdGl2ZXMvZmlndXJlcy9rYWppa2F3YV8yMDIyX1N0YXRlc1JpcHBsZXMvb25saW5l  ZGVyaXZhdGl2ZXMvZmlndXJlcy9rb3JvdmFpY2h1a18yMDEwX01pbm9yQ29udHJpYnV0aW9uL29ubGluZQ==  ZGVyaXZhdGl2ZXMvZmlndXJlcy9rb3JvdmFpY2h1a18yMDEwX01pbm9yQ29udHJpYnV0aW9uL3BkZmZpZ3VyZXMy  ZGVyaXZhdGl2ZXMvZmlndXJlcy9sZXNraV8yMDEwX0V4dHJhY3RpbmdGdW5jdGlvbmFsL29ubGluZQ==  (+44 more)
code/: download_figures.py  fetch.py  fetchpdfs.py  figconfig.py  merge.py
config/: config.yaml  extract_config.md
logs/: .pdf_manifest.json  fetched_pdfs.txt
metadata/: pixecog.bib  src-arash-pixecog.bib
rag/: README.md  build_index.py  chatbot.py  index_config.yaml  query_cli.py  querybot.py
srcbib/: src-ica.bib
(+60 files in other folders)
