[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bib"
version = "0.0.0"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }  

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["**/*.py"]

typeCheckingMode = "basic"
diagnosticSeverityOverrides = { reportMissingModuleSource = "none" }
